--- a/index.html
+++ b/index.html
@@ -45,6 +45,36 @@
     #submitBtn:hover {
         background-color: #45a049; /* Darker green on hover */
     }
+	#playButtonContainer {
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		padding: 0;
+		margin: 0;
+      	background-color: rgba(255, 255, 255, 0.2); /* light transparent */
+		backdrop-filter: blur(2px); /* this creates the blur effect */
+		-webkit-backdrop-filter: blur(10px); /* for Safari */
+        z-index: 1010;
+	}
+	#playButton {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		background-color: rgb(246, 72, 72);
+		color: #ffffff;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
+		cursor: pointer;
+		border-radius: 5px;
+		border-color: #000000;
+		font-size: 42px;
+		padding: 10px 20px;
+		padding-top: 5px;
+		font-weight: 500;
+		font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	}
 </style>
 
 <script>
@@ -238,12 +268,19 @@
 					.catch(err => console.error('Failed to fetch messages:', err));
 			}, 1000); // Every x seconds
 
+			playButton.addEventListener('click', () => {
+				document.getElementById('playButtonContainer').style.display = 'none';
+			});
+
         }
 
 
 </script>
 
 <body onload="init()">
+<div id="playButtonContainer">
+	<button id="playButton">PLAY</button>
+</div>
 <div id="map"></div>
 <form id="country-form">
 	<label for="country1-name">Country1 Name:</label>
